# Finite-Element-Mesh-Data-Structure

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp  mesh2d.cpp  mesh2d.hpp
tests/: test_mesh2d.cpp
